<resources>
    <string name="app_name">aston_intensive_course_work</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="character_image">Character image</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="episode_number">Episode №</string>
    <string name="air_date">Air date</string>
    <string name="location_type">Type</string>
    <string name="location_dimension">Dimension</string>
    <string name="Toast">There is no available data for your query</string>
    <string name="type">Type</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="general">General</string>
    <string name="characters_filters">Character filters</string>
    <string name="character_name">Name</string>
    <string name="character_s_name_filter">Character name</string>
    <string name="characters_status_filter">Character status</string>
    <string name="characters_species_filter">Character species</string>
    <string name="characters_type_filter">Character type</string>
    <string name="characters_gender_filter">Character gender</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="filters">Filters</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="clear">Clear</string>
    <string name="locations_filters">Location filters</string>
    <string name="locations_name_filter">Location name</string>
    <string name="locations_type_filter">Location type</string>
    <string name="locations_dimension_filter">Location dimension</string>
    <string name="episodes_filters">Episode filters</string>
    <string name="episodes_name_filter">Episode name</string>
    <string name="episodes_number_filter">Episode number</string>
    <string name="characters_details">Character details</string>
    <string name="locations_details">Location details</string>
    <string name="episode_details">Episode details</string>
    <string name="episode_number_title">Episode #</string>
    <string name="genderless">Genderless</string>
    <string name="logo_text">Logo text</string>
    <string name="big_progress_bar">Big progress bar</string>
</resources>