<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/TextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/characters_filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/character_name_filter_title"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/character_name"
        app:layout_constraintEnd_toEndOf="@+id/character_species_filter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/character_name_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/character_s_name_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_name_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/character_status_filter_title"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintEnd_toEndOf="@+id/character_species_filter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_name_filter" />

    <EditText
        android:id="@+id/character_status_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/characters_status_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_status_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/character_name_filter" />

    <TextView
        android:id="@+id/character_species_filter_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_status_filter" />

    <EditText
        android:id="@+id/character_species_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/characters_species_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_species_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/character_status_filter" />

    <TextView
        android:id="@+id/character_type_filter_title"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintEnd_toEndOf="@+id/character_species_filter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_species_filter" />

    <EditText
        android:id="@+id/character_type_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/characters_type_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_type_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/character_species_filter" />

    <TextView
        android:id="@+id/character_gender_filter_title"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="@+id/character_species_filter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_type_filter" />

    <EditText
        android:id="@+id/character_gender_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/characters_gender_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_gender_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/character_type_filter" />

    <include
        layout="@layout/filters_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_gender_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>