<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_location_filters"
        style="@style/TextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/locations_filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_name_filter_title"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/character_name"
        app:layout_constraintEnd_toEndOf="@+id/location_dimension_filter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_location_filters" />

    <EditText
        android:id="@+id/location_name_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/locations_name_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/location_name_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_location_filters" />

    <TextView
        android:id="@+id/location_type_filter_title"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintEnd_toEndOf="@+id/location_dimension_filter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_filter" />

    <EditText
        android:id="@+id/location_type_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/locations_type_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/location_type_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/location_name_filter" />

    <TextView
        android:id="@+id/location_dimension_filter_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_dimension"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_type_filter" />

    <EditText
        android:id="@+id/location_dimension_filter"
        style="@style/TextBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/locations_dimension_filter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/location_dimension_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/location_type_filter" />

    <include
        layout="@layout/filters_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_dimension_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>