<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_frame"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_character_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/margin_top"
            android:contentDescription="@string/character_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/no_image" />

        <TextView
            android:id="@+id/text_view_character_name"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_character_image"
            tools:text="Rick Sanchez" />

        <TextView
            android:id="@+id/text_view_character_species_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"
            app:layout_constraintEnd_toStartOf="@+id/text_view_character_species"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_character_name" />

        <TextView
            android:id="@+id/text_view_character_species"
            style="@style/TextBasic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_character_species_title"
            app:layout_constraintTop_toBottomOf="@+id/text_view_character_name"
            tools:text="Human" />

        <TextView
            android:id="@+id/text_view_character_gender_title"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintEnd_toEndOf="@+id/text_view_character_species_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_character_species" />

        <TextView
            android:id="@+id/text_view_character_gender"
            style="@style/TextBasic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_character_gender_title"
            app:layout_constraintTop_toBottomOf="@+id/text_view_character_species"
            tools:text="Male" />

        <TextView
            android:id="@+id/text_view_character_status_title"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_top"
            android:text="@string/status"
            app:layout_constraintEnd_toEndOf="@+id/text_view_character_species_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_character_gender" />

        <TextView
            android:id="@+id/text_view_character_status"
            style="@style/TextBasic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_character_status_title"
            app:layout_constraintTop_toBottomOf="@+id/text_view_character_gender"
            tools:text="Alive" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_icon"
            android:indeterminateDuration="1000"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_character_image"
            app:layout_constraintEnd_toEndOf="@+id/image_view_character_image"
            app:layout_constraintStart_toStartOf="@+id/image_view_character_image"
            app:layout_constraintTop_toTopOf="@+id/image_view_character_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

